Fixed backend data handling in frontend